<resources>
    <string name="app_name">Daily Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="edit_photo">Редактировать фото</string>
    <string name="full_name">Полное имя</string>
    <string name="email">E-mail адрес</string>
    <string name="avatar_description">Фото пользователя</string>
    <string name="save_data">Сохранить измененные данные</string>
    <string name="about_program">Данное приложение является приложением для планирования дня и поиска интересных событий, которые тщательо отобраны нашими редакторами.
        \nПриложение было создано в рамках курсовой работы по предмету "Разработка мобильных приложений"</string>
    <string name="instruction">Чтобы добавить новую задачу необходима:\n
        1. Перейти на страницу "Список задач" и нажать на кнопку "Добавить задачу";\n
        2. В открывщемся редакторе задач ввести необходимую информацию о задаче;\n
        3. Нажать на кнопку "Создать задачу".\nПосле чего задача будет создана.\n\nЧтобы добавить событие из списка событий необходимо:\n
        1. Перейти на страницу "События";\n
        2. Выбрать событие, которое хотите добавить и нажать на кнопку "Добавить событие".\nПосле чего событие будет добавленно в ваш список задач.</string>
</resources>