<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mainpages.profile.ProfileFragment">

        <Button
            android:id="@+id/infoButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="i"/>

        <!-- Circular ImageView with avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:src="@drawable/avatar_placeholder"
            android:contentDescription="@string/avatar_description" />

        <!-- Button for editing the photo -->
        <Button
            android:id="@+id/editPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatarImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/edit_photo" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPhotoButton"
            android:layout_marginTop="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/full_name"/>

        <!-- EditText for full name -->
        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullNameTextView"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/emailNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullNameEditText"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/email"/>

        <!-- EditText for email -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailNameTextView"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:enabled="false"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditText"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="Пароль"/>

        <!-- EditText for email -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextView"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/red"
            android:text="Выйти из аккаунта" />

        <Button
            android:id="@+id/saveDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logOutButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/save_data" />

    </RelativeLayout>
</ScrollView>